# SPDX-FileCopyrightText: 2015-2026 CERN.
# SPDX-FileCopyrightText: 2021-2026 TU Wien.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2025 KTH Royal Institute of Technology.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-accounts"
description = "Invenio user management and authentication."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "accounts",
  "invenio",
  "login",
  "role",
  "user",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "cryptography>=3.0.0",
  "flask-kvsession-invenio>=1.0.0,<2.0.0",
  "flask-security-invenio>=4.0.0,<5.0.0",
  "invenio-celery>=2.0.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-mail>=1.0.2,<3.0.0",
  "invenio-rest>=4.0.0,<5.0.0",
  "invenio-theme>=5.0.0,<6.0.0",
  "limits>=4.0.0",
  "maxminddb-geolite2>=2017.404",
  "pyjwt>=1.5.0",
  "simplekv>=0.11.2",
  "ua-parser>=0.7.3",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-accounts"

[project.entry-points."flask.commands"]
domains = "invenio_accounts.cli:domains"
roles = "invenio_accounts.cli:roles"
users = "invenio_accounts.cli:users"

[project.entry-points."invenio_admin.views"]
invenio_accounts_role = "invenio_accounts.admin:role_adminview"
invenio_accounts_session = "invenio_accounts.admin:session_adminview"
invenio_accounts_user = "invenio_accounts.admin:user_adminview"
invenio_accounts_user_identity = "invenio_accounts.admin:user_identity_adminview"

[project.entry-points."invenio_base.api_apps"]
invenio_accounts_rest = "invenio_accounts:InvenioAccountsREST"

[project.entry-points."invenio_base.api_blueprints"]
invenio_accounts_rest_auth = "invenio_accounts.views.rest:create_rest_blueprint"

[project.entry-points."invenio_base.apps"]
invenio_accounts_ui = "invenio_accounts:InvenioAccountsUI"

[project.entry-points."invenio_base.blueprints"]
invenio_accounts = "invenio_accounts.views.settings:create_settings_blueprint"

[project.entry-points."invenio_base.finalize_app"]
invenio_accounts = "invenio_accounts.ext:finalize_app"

[project.entry-points."invenio_celery.tasks"]
invenio_accounts = "invenio_accounts.tasks"

[project.entry-points."invenio_db.alembic"]
invenio_accounts = "invenio_accounts:alembic"

[project.entry-points."invenio_db.models"]
invenio_accounts = "invenio_accounts.models"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_accounts"

[project.optional-dependencies]
admin = [
  "invenio-admin>=1.2.1,<2.0.0",
]
mysql = [
  "invenio-db[mysql]>=2.2.0,<3.0.0",
]
postgresql = [
  "invenio-db[postgresql]>=2.2.0,<3.0.0",
]
sqlite = [
  "invenio-db>=2.2.0,<3.0.0",
]
tests = [
  "invenio-app>=3.0.0,<4.0.0",
  "mock>=1.3.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_accounts/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_accounts/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_accounts/translations/messages.pot"
output_dir = "invenio_accounts/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_accounts/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_accounts",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401,D202"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_accounts --cov-report=term-missing'
testpaths = "tests invenio_accounts"
live_server_scope = "module"
